--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -60,7 +60,7 @@ text-align: center;
   
   .jumbotron {
     text-align: center;
-    background-image: asset-url('meeting.png');
+    background-image: asset-url('wolfgang-hasselmann-1403514-unsplash.jpg');
     background-size: cover;
     color: #fff;
     font-family: 'Helvetica Neue' !important;
